small revisions to each doc to correct build failure.

--- a/express-c-series-aff220-design_solution_verification.adoc
+++ b/express-c-series-aff220-design_solution_verification.adoc
@@ -1,11 +1,12 @@
 ---
 sidebar: sidebar
 permalink: express-c-series-aff220-design_solution_verification.html
-keywords: verification, express,
+keywords: verification, express
 summary:  From redundancy and availability to each individual feature, the entire FlexPod Express architecture is validated to instill confidence in our customers and to build trust in the design process.
 ---
 
 = Solution verification
+
 :hardbreaks:
 :nofooter:
 :icons: font
