--- a/express-c-series-aff220-design_technology_requirements.adoc
+++ b/express-c-series-aff220-design_technology_requirements.adoc
@@ -26,6 +26,7 @@ Regardless of the hypervisor chosen, all FlexPod Express configurations use the 
 
 The following table lists the hardware components that are required for all FlexPod Express configurations and to implement the solution. The hardware components that are used in any particular implementation of the solution might vary based on customer requirements.
 
+[cols=2*,options="header",cols="50,50"]
 |===
 |Hardware |Quantity
 
@@ -47,6 +48,7 @@ The following tables list the software components that are required to implement
 
 The following table lists software requirements for the base FlexPod Express implementation.
 
+[cols=3*,options="header",cols="33,33,33"]
 |===
 |Software |Version |Details
 
@@ -63,6 +65,7 @@ The following table lists software requirements for the base FlexPod Express imp
 
 The following table lists the software that is required for all VMware vSphere implementations on FlexPod Express.
 
+[cols=2*,options="header",cols="50,50"]
 |===
 |Software  |Version
 
