Update repo landing page text.

--- a/index.adoc
+++ b/index.adoc
@@ -2,7 +2,8 @@
 layout: astra
 sidebar: sidebar
 permalink: index.html
-lead: FlexPod solutions are a set of strategic and technology capabilities that emphasize the NetApp portfolio of products and services to support our Customers' most critical business needs.
+lead: Built on groundbreaking technology from NetApp and Cisco and trusted by thousands of customers across the globe, the FlexPod platform meets and exceeds the challenges of simplifying deployments for best-in-class data center architecture.
+Composed of prevalidated storage, networking, and server technologies, FlexPod is designed to increase IT responsiveness to organizational needs, reduce the cost of computing, and deliver maximum uptime and minimal risk. By simplifying the delivery of data and applications, your enterprise gains the advantage of running new services and workloads at the edge, core, or in the cloud.
 summary: FlexPod solutions are a set of strategic and technology capabilities that emphasize the NetApp portfolio of products and services to support our Customers' most critical business needs.
 ---
 
