changes to individual sidebars.

--- a/index.adoc
+++ b/index.adoc
@@ -13,3 +13,7 @@ summary: FlexPod solutions are a set of strategic and technology capabilities th
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
+
+Built on groundbreaking technology from NetApp and Cisco and trusted by thousands of customers across the globe, the FlexPod platform meets and exceeds the challenges of simplifying deployments for best-in-class data center architecture.
+
+Composed of prevalidated storage, networking, and server technologies, FlexPod is designed to increase IT responsiveness to organizational needs, reduce the cost of computing, and deliver maximum uptime and minimal risk. By simplifying the delivery of data and applications, your enterprise gains the advantage of running new services and workloads at the edge, core, or in the cloud.
