media reference corrections.

--- a/express-c-series-c190-design/express-c-series-c190-design_design_choices.adoc
+++ b/express-c-series-c190-design/express-c-series-c190-design_design_choices.adoc
@@ -11,7 +11,7 @@ summary: The technologies listed in this section were chosen during the architec
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
