--- a/express-c-series-aff220-design/express-c-series-aff220-design_conclusion.adoc
+++ b/express-c-series-aff220-design/express-c-series-aff220-design_conclusion.adoc
@@ -11,7 +11,7 @@ summary: FlexPod Express offers a simple and effective solution by providing a v
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
