--- a/express-c-series-aff220-design/express-c-series-aff220-design_design_choices.adoc
+++ b/express-c-series-aff220-design/express-c-series-aff220-design_design_choices.adoc
@@ -11,7 +11,7 @@ summary: The technologies listed on this page were chosen during the process of 
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
