--- a/express-c-series-aff220-design/express-c-series-aff220-design_program_summary.adoc
+++ b/express-c-series-aff220-design/express-c-series-aff220-design_program_summary.adoc
@@ -10,7 +10,7 @@ summary: FlexPod reference architectures are delivered as Cisco Validated Design
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
