--- a/express-c-series-aff220-design/express-c-series-aff220-design_technology_requirements.adoc
+++ b/express-c-series-aff220-design/express-c-series-aff220-design_technology_requirements.adoc
@@ -10,7 +10,7 @@ summary: FlexPod Express requires a combination of hardware and software compone
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
