--- a/express-c-series-c190-design/express-c-series-c190-design_conclusion.adoc
+++ b/express-c-series-c190-design/express-c-series-c190-design_conclusion.adoc
@@ -11,7 +11,7 @@ summary: The FlexPod Express validated design is a simple and effective solution
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
