--- a/express-c-series-c190-design/express-c-series-c190-design_where_to_find_additional_information.adoc
+++ b/express-c-series-c190-design/express-c-series-c190-design_where_to_find_additional_information.adoc
@@ -11,7 +11,7 @@ summary: To learn more about the information described in this document, see the
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
