--- a/express-direct-attach-design/express-direct-attach-design_solution_overview.adoc
+++ b/express-direct-attach-design/express-direct-attach-design_solution_overview.adoc
@@ -11,7 +11,7 @@ summary: FlexPod Express is designed to run mixed virtualization workloads. It i
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
