--- a/express-direct-attach-design/express-direct-attach-design_solution_verification.adoc
+++ b/express-direct-attach-design/express-direct-attach-design_solution_verification.adoc
@@ -11,7 +11,7 @@ summary: In keeping with the fundamental principles of the FlexPod program, the 
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
