--- a/express-direct-attach-design/express-direct-attach-design_technology_requirements.adoc
+++ b/express-direct-attach-design/express-direct-attach-design_technology_requirements.adoc
@@ -11,7 +11,7 @@ summary: A FlexPod Express system requires a combination of hardware and softwar
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
