Repair single image reference.

--- a/ontap-connector-for-intersight/ci-qsg_before_you_begin.adoc
+++ b/ontap-connector-for-intersight/ci-qsg_before_you_begin.adoc
@@ -46,6 +46,8 @@ image:ci-qsg_image2.png[Error: Missing Graphic Image]
 
 image:ci-qsg_image3.png[Error: Missing Graphic Image]
 
+image:ci-qsg_image4.png[Error: Missing Graphic Image]
+
 .. Click *Next*.
 
 . Post-deploy the Intersight Assist Appliance.
