--- a/ontap-connector-for-intersight/index.adoc
+++ b/ontap-connector-for-intersight/index.adoc
@@ -12,7 +12,7 @@ summary: NetApp and Cisco have partnered to provide Cisco Intersight, a single-p
 :linkattrs:
 :imagesdir: ./../media/
 
-Rachel Lithman, NetApp
+Rachel Lithman and Sree Lanka, NetApp
 
 == Introduction
 
