--- a/ehr-epic-deploy/ehr-epic-deploy_cisco_mds_9148s_configuration.adoc
+++ b/ehr-epic-deploy/ehr-epic-deploy_cisco_mds_9148s_configuration.adoc
@@ -18,7 +18,6 @@ summary: The Cisco MDS 9100 Series FC switches provide redundant 16Gb FC connect
 // 2021-05-07 11:34:58.201495
 //
 
-[.lead]
 The Cisco MDS 9100 Series FC switches provide redundant 16Gb FC connectivity between the NetApp AFF A700 controllers and the Cisco UCS compute fabric. The cables should be connected as described in the section link:ehr-epic-deploy_deployment_and_configuration_overview.html#cabling-diagram[“Cabling Diagram.”]
 
 . From the switch consoles on each MDS switch, run the following commands to enable the required features for the solution:
@@ -32,7 +31,7 @@ feature fport-channel-trunk
 . Configure individual ports, port channels, and descriptions as per the FlexPod Cisco MDS switch configuration section in https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with FC Cisco Validated Design^].
 . To create the necessary VSANs for the Epic solution, complete the following steps while in global configuration mode:
 
-** For fabric A MDS switch:
+.. For fabric A MDS switch:
 +
 ....
 vsan database
@@ -67,9 +66,10 @@ vsan <vsan-b-id> interface port-channel113
 The port channel numbers in the last two lines of the command were created when the individual ports, port channels, and descriptions were provisioned using the reference document.
 
 . For each FC switch, create device alias names that make identifying each device intuitive for ongoing operations using the details in the reference document.
+
 . Finally, create the FC zones using the device alias names created in the previous step for each MDS switch as follows:
 
-** For fabric A MDS switch:
+.. For fabric A MDS switch:
 +
 ....
 configure terminal
@@ -92,7 +92,7 @@ exit
 show zoneset active vsan <vsan-a-id>
 ....
 
-** For fabric B MDS switch:
+.. For fabric B MDS switch:
 +
 ....
 configure terminal
@@ -117,7 +117,7 @@ show zoneset active vsan <vsan-b-id>
 
 == Cisco UCS configuration guidance
 
-Cisco UCS allows Epic customers to leverage their subject matter experts in network, storage, and compute to create policies and templates that tailor the environment to their specific needs. After being created, these policies and templates can be combined into service profiles that deliver consistent, repeatable, reliable, and fast deployments of Cisco blade and rack servers.
+Cisco UCS allows Epic customers to use their subject matter experts in network, storage, and compute to create policies and templates that tailor the environment to their specific needs. After being created, these policies and templates can be combined into service profiles that deliver consistent, repeatable, reliable, and fast deployments of Cisco blade and rack servers.
 
 Cisco UCS provides three methods for managing a Cisco UCS system, called a domain:
 
@@ -125,13 +125,13 @@ Cisco UCS provides three methods for managing a Cisco UCS system, called a domai
 * Cisco UCS CLI
 * Cisco UCS Central for multidomain environments
 
-The figure below shows a sample screenshot of the SAN node in Cisco UCS Manager.
+The following figure shows a sample screenshot of the SAN node in Cisco UCS Manager.
 
 image:ehr-epic-deploy_image10.png[Error: Missing Graphic Image]
 
 In larger deployments, independent Cisco UCS domains can be built for additional fault tolerance at the major Epic functional component level.
 
-In highly fault- tolerant designs with two or more data centers, Cisco UCS Manager plays a key role in setting global policy and global service profiles for consistency between hosts throughout the enterprise.
+In highly fault-tolerant designs with two or more data centers, Cisco UCS Manager plays a key role in setting global policy and global service profiles for consistency between hosts throughout the enterprise.
 
 Complete the following procedures to set up the Cisco UCS compute platform. Perform these procedures after the Cisco UCS B200 M5 blade servers are installed in the Cisco UCS 5108AC blade chassis. Also, the cabling requirements must be completed as described in the section link:ehr-epic-deploy_deployment_and_configuration_overview.html#cabling-diagram[“Cabling Diagram.”]
 
@@ -139,7 +139,7 @@ Complete the following procedures to set up the Cisco UCS compute platform. Perf
 . Configure the reporting, call home features, and NTP settings for the domain.
 . Configure the server and uplink ports on each fabric interconnect.
 . Edit the chassis discovery policy.
-. Create the address pools for out- of- band management, UUIDs, MAC address, servers, WWNN, and WWPN.
+. Create the address pools for out-of-band management, UUIDs, MAC address, servers, WWNN, and WWPN.
 . Create the Ethernet and FC uplink port channels and VSANs.
 . Create policies for SAN connectivity, network control, server pool qualification, power control, server BIOS, and default maintenance.
 . Create vNIC and vHBA templates.
